<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">App Installer</string>
    <string name="title_store">Demo Store</string>
    <string name="title_library">My Apps</string>
    <string name="title_app_details">My App Details</string>
    <string name="title_settings">Settings</string>

    <string name="request_permission_label">Request Permission</string>
    <string name="install_label">Install</string>
    <string name="cancel_install_label">Cancel</string>
    <string name="open_app_install">Open</string>
    <string name="uninstall_label">Uninstall</string>
    <string name="update_available_status">&#9679; Update available</string>

    <string name="autoupdate_settings_description">DemoStore will update (or not) automatically apps it has installed based on these settings</string>
    <string name="auto_update_title">Auto-update Settings</string>

    <string name="auto_update_schedule_label">Auto-update Schedule</string>
    <string name="trigger_auto_updates_manually_label">Trigger auto-updating manually</string>

    <string name="auto_update_disabled">Don\'t auto-update apps</string>
    <string name="auto_update_schedule">Check and update %d minutes</string>

    <string name="update_availability_period_label">Time between install and update availability</string>

    <string name="update_availability_disabled">No updates</string>
    <string name="update_availability_seconds_period">After %d seconds</string>
    <string name="update_availability_minutes_period">After %d minutes</string>

    <string name="install_notification_channel">Install app</string>
    <string name="install_notification_title">Install app</string>
    <string name="install_notification_description">Click here to install the app %s</string>

    <string name="uninstall_notification_channel">Uninstall app</string>
    <string name="uninstall_notification_title">Uninstall app</string>
    <string name="uninstall_notification_description">Click here to uninstall the app %s</string>

    <string name="update_notification_channel">Update app</string>
    <string name="update_notification_title">Update app</string>
    <string name="update_notification_description">Click here to update the app %s</string>
    <string name="multiple_updates_notification_title">Update app</string>
    <string name="multiple_updates_notification_description">Check out these %s app updates</string>

    <string name="large_text" tools:ignore="Typos">
Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam iaculis ultricies sapien, ultrices feugiat libero malesuada non.
\n\nNunc maximus aliquam purus:
\n\n&#8226; Cras accumsan orci sed dolor eleifend scelerisque.
\n&#8226; Suspendisse ut justo nec augue ultricies bibendum.
\n&#8226; Vestibulum ante ipsum primis in faucibus orci luctus.
\n\nUt efficitur enim massa, at lacinia ipsum auctor eu. Curabitur in justo ac lacus dapibus dapibus. Phasellus sit amet mauris magna. In luctus pretium magna, in porta lacus. Nunc hendrerit arcu dolor, vel fringilla odio laoreet sed. Nam tincidunt felis felis. Donec sagittis ut eros non posuere. Ut condimentum vestibulum mattis. Vivamus vitae felis risus.
\n\nPraesent tristique orci ante, sit amet egestas orci rutrum a. Fusce sit amet ipsum orci. Pellentesque sagittis, quam ut viverra finibus, ex risus malesuada mi, ac eleifend tellus enim consectetur nulla. Mauris sem arcu, blandit ut felis id, auctor convallis turpis. Nunc sagittis sem non mi aliquet dapibus. Proin feugiat nisl at tellus ullamcorper rhoncus.
\n\nNam sit amet risus non ligula facilisis rhoncus. Integer dapibus, lectus et lobortis bibendum, sem enim dignissim ligula, sit amet dictum sapien lorem non velit. Etiam mollis nunc ac gravida efficitur. Curabitur aliquam ornare augue, quis pharetra ipsum feugiat non. Curabitur porttitor vel augue ut pretium. Sed tempus tortor eros, ut aliquet felis molestie non. Quisque ut placerat velit, eu tempor eros. Aliquam eleifend metus id erat sodales ullamcorper.
\n\nDonec sem purus, luctus bibendum est vestibulum, accumsan dignissim sapien. Nulla ornare quam eu justo malesuada finibus. Sed sed eleifend purus, mollis egestas turpis. Duis faucibus laoreet tortor, in interdum est maximus nec. In id porttitor velit. Nunc feugiat sem ac tortor feugiat faucibus. Sed sodales elit non massa ultrices pulvinar.
\n\nPraesent facilisis vehicula vehicula. Duis enim quam, fringilla et aliquam vel, accumsan a nunc. Mauris viverra elit ac faucibus suscipit. Nunc tincidunt urna vel congue vehicula. Donec laoreet nibh tempor diam elementum, nec imperdiet ante rhoncus. Mauris gravida mi dolor. Suspendisse potenti.
\n\nSuspendisse at urna et nibh blandit laoreet. Nam cursus turpis at neque mattis ultrices. Integer ornare sollicitudin erat sit amet gravida. Cras placerat tempus urna, nec euismod eros laoreet a. Proin at ex mauris. Donec urna ante, efficitur et magna sollicitudin, imperdiet ultrices sapien. Etiam quis dui pulvinar, efficitur justo id, placerat leo. Pellentesque vel neque diam. Nunc elementum dui sed sem volutpat accumsan. Maecenas cursus ullamcorper dictum. Nunc ut odio in orci volutpat pretium et at nisi.
    </string>
</resources>