<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_store">

    <fragment
        android:id="@+id/navigation_store"
        android:name="com.samples.appinstaller.store.StoreFragment"
        android:label="@string/title_store"
        tools:layout="@layout/fragment_store" />

    <fragment
        android:id="@+id/navigation_library"
        android:name="com.samples.appinstaller.app.AppDetailsFragment"
        android:label="@string/title_library"
        tools:layout="@layout/fragment_library" />

    <fragment
        android:id="@+id/navigation_app_details"
        android:name="com.samples.appinstaller.app.AppDetailsFragment"
        android:label="@string/title_app_details"
        tools:layout="@layout/fragment_app_details" />
</navigation>