<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewmodel"
            type="com.samples.appinstaller.settings.SettingsViewModel" />

        <variable
            name="settingsHandler"
            type="com.samples.appinstaller.settings.SettingsFragment.SettingsHandler" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        tools:context=".settings.SettingsFragment">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/auto_update_title"
            android:textAppearance="?attr/textAppearanceHeadline6" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="20dp"
            android:lineSpacingMultiplier="1.5"
            android:text="@string/autoupdate_settings_description"
            android:textAppearance="?attr/textAppearanceBody2" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="@{settingsHandler::showAutoUpdateSchedule}"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/auto_update_schedule_label"
                android:textAppearance="?attr/textAppearanceSubtitle1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@{viewmodel.autoUpdateSchedule.toString()}"
                android:textAppearance="?attr/textAppearanceCaption"
                tools:text="Check and update every minute" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="@{settingsHandler::showUpdateAvailabilityPeriod}"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/update_availability_period_label"
                android:textAppearance="?attr/textAppearanceSubtitle1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="30dp"
                android:text="@{viewmodel.updateAvailabilityPeriod.toString()}"
                android:textAppearance="?attr/textAppearanceCaption"
                tools:text="Updates available one minute after install" />
        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/trigger_auto_updates_manually_label"
            android:onClick="@{viewmodel.triggerAutoUpdating}"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/trigger_new_updates_label"
            android:onClick="@{viewmodel.triggerAddingUpdates}" />
    </LinearLayout>
</layout>